--- a/openapi/paths/path-item-with-examples.yaml
+++ b/openapi/paths/path-item-with-examples.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - Tag
+    - Pick up
   summary: Operation summary with examples
   description: |
     Operation description **markdown**.
